--- a/MVC_Assignment/Views/Shared/_navbar.cshtml
+++ b/MVC_Assignment/Views/Shared/_navbar.cshtml
@@ -15,16 +15,19 @@
             <a class="navbar-brand font-weight-bold" href="/Home/Index">
                 <img width="100px" src="~/images/Echo_Logo.jpg" alt="Alternate Text" />
             </a>
-            <div class="float-right d-flex flex-row align-items-center ">
+            <div class="float-right d-flex flex-row align-items-center text-primary ">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/Home/Index">Home </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="/Home/Gallery">Gallery</a>
+                        <a class="nav-link" href="/Home/Products">Products</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/Home/About">About</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="/Home/Amazon">Amazon</a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-outline-primary   btn-dark rounded shadow ml-5 btn-sm">   <a class="text-light nav-link" href="/Home/Download">Download Manual</a></button>
